--- a/StartingCode-heightmap.html
+++ b/StartingCode-heightmap.html
@@ -26,6 +26,8 @@
 		<script>
 
 		var scene, camera, renderer, controls, stats;
+		var angle, sea, coast, foam;
+		var time,clock;
 
 		//return array with height data from img, taken from: http://danni-three.blogspot.it/2013/09/threejs-heightmaps.html
 		function getHeightData(img,scale) {
@@ -59,6 +61,9 @@
 		}
 
 		function Start() {
+			sea=[];
+			coast=[];
+			angle=0;
 			scene = new THREE.Scene();
 			camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 			renderer = new THREE.WebGLRenderer( {antialias: true} );
@@ -66,7 +71,11 @@
 			renderer.setClearColor( 0xf0f0f0 );
 			document.body.appendChild( renderer.domElement );
 
-			camera.position.set(3,4,6);
+			clock = new THREE.Clock();
+			time = clock.getElapsedTime();
+
+
+			camera.position.set(71.7645,10.26048,64,1695);
 			camera.lookAt( new THREE.Vector3(0,0,0));
 
 			controls = new THREE.OrbitControls( camera, renderer.domElement );
@@ -90,10 +99,11 @@
 		      //get height data from img
 		    var data = getHeightData(img,0.3);
 				createTerrain(data);
+				foam = buildFoam(coast);
 
 		  };
 		  // load img source
-		  img.src = "textures/TerrainMid.jpg";
+		  img.src = "textures/TerrainLow.jpg";
 
 
 
@@ -105,72 +115,177 @@
 
 			var x = 0 ;
 			var y = 0	;
-			var best = data[0];
-			var lowest = best;
 
 			for(var i=0;i<size;i++){
 
-				var color = choosecolor(data[i]);
-				var mat = new THREE.MeshBasicMaterial({color: color});
-				var geo = new THREE.BoxBufferGeometry(1,1,1);
-				var cube = new THREE.Mesh(geo,mat);
-				if(data[i]>best){
-					best=data[i];
-				}
-				if(data[i]<lowest){
-					lowest=data[i];
-				}
+				var cube = buildCube(data[i]);
+
 				scene.add(cube);
-				cube.position.set(x,data[i]/2.3,y);
+				cube.position.set(x,data[i]/4,y);
 				x++;
+
 				if(x==acapo){
 					x=0;
 					y++;}
 				}
 
-				console.log(best,lowest);
+		}
+
+		function buildCube(value){
+
+			var color;
+			var isSea = false;
+
+			var isCoast = false;
+
+			if(value<=1){
+				var col = getRndInteger(180,200);
+				color= new THREE.Color("rgb(0,0,"+col+")");
+				isSea = true;
+
+			}else if(value<=3 && value>1){
+				var col = getRndInteger(220,255);
+				color= new THREE.Color("rgb(0,0,"+col+")");
+				isSea = true;
+
+
+			}else if(value<=5 && value>3){
+				var col = getRndInteger(180,200);
+				color= new THREE.Color("rgb(0,"+col+","+col+")");
+				isCoast = true;
+
+			}else if(value<=6 && value>5){
+				var col1 = getRndInteger(190,205);
+				var col2 = getRndInteger(170,195);
+				var col3 = getRndInteger(100,115);
+				color= new THREE.Color("rgb("+col1+","+col2+","+col3+")");
+
+
+			}else  if(value<=9 && value>6){
+				var col1 = getRndInteger(220,240);
+				var col2 = getRndInteger(202,222);
+				var col3 = getRndInteger(82,102);
+				color= new THREE.Color("rgb("+col1+","+col2+","+col3+")");
+
+			}else  if(value<=12 && value>9){
+
+				var col = getRndInteger(201,241);
+				color= new THREE.Color("rgb(0,"+col+",0)");
+
+			}else  if(value<=13 && value>12){
+
+				var col = getRndInteger(171,201);
+				color= new THREE.Color("rgb(0,"+col+",0)");
+
+			}else  if(value<=17.5 && value>13){
+
+				var col = getRndInteger(64,84);
+				color= new THREE.Color("rgb(122,"+col+",28)");
+
+			}else  if(value<=22 && value>17.5){
+
+				var col = getRndInteger(38,47);
+				color= new THREE.Color("rgb(82,"+col+",29)");
+
+			}else  if(value<=23 && value>22){
+				color= new THREE.Color("rgb(95, 143, 91)");
+
+			}else  if(value<=30.5 && value>23){
+
+				var col1 = getRndInteger(151,154);
+				var col2 = col1-17;
+				var col3 = col1-26;
+				color= new THREE.Color("rgb("+col1+","+col2+","+col3+")");
+
+			}else  if(value<=36 && value>30.5){new THREE.Color("rgb(255, 255, 255)");}
+
+			var mat = new THREE.MeshBasicMaterial({color: color});
+
+			var geo = new THREE.BoxBufferGeometry(1,1,1);
+
+			var cube = new THREE.Mesh(geo,mat);
+			if(isSea){
+				sea.push(cube);
+			}else if(isCoast){
+				coast.push(cube);
+			}
+
+			return cube;
+		}
+
+
+
+		function buildFoam(object){
+			var foam=[];
+
+			for(var i=0;i<object.length;i++){
+				var frag=object[i];
+
+
+				for(var j=0;j<4;j++){
+
+					var col = getRndInteger(190,210);
+					color= new THREE.Color("rgb("+col+","+col+","+col+")");
+					var mat = new THREE.MeshBasicMaterial({color: color});
+
+					var random = getRndInteger(0,3);
+					var ran = random/10;
+					var geo = new THREE.BoxBufferGeometry(0.45,0.5,0.45);
+					var cube = new THREE.Mesh(geo,mat);
+					if(j==0){
+						cube.position.set(frag.position.x + 0.25+1,frag.position.y+ran, frag.position.z + 0.25);
+					}else if(j==1){
+						cube.position.set(frag.position.x + 0.25+1,frag.position.y+ran, frag.position.z - 0.25);
+					}else if(j==2){
+						cube.position.set(frag.position.x - 0.25+1,frag.position.y+ran, frag.position.z - 0.25);
+					}else{
+						cube.position.set(frag.position.x - 0.25+1,frag.position.y+ran, frag.position.z + 0.25);
+					}
+					scene.add(cube);
+					foam.push(cube);
+				}}
+			return foam;
 
 		}
 
-		function choosecolor(value){
-
-			if(value<=1){ return 0x000055;
 
 
-			}else if(value<=3 && value>1){  return 0x0000ff;
+		function move(angle,height,object){
 
+			for(var i=0;i<object.length;i++){
+				var frag= object[i];
+				frag.position.y+= Math.sin(angle + frag.position.x*height);
+			}
+		}
 
-			}else if(value<=5 && value>3){ return 0x00ffff;
-
-
-			}else if(value<=7 && value>5){return 0xc7bb6b;
-
-
-			}else  if(value<=9 && value>7){return 0xe6d45c;
-
-
-			}else  if(value<=12 && value>9){return 0X00dd00;
-
-			}else  if(value<=18 && value>12){return 0x7a3b26;
-
-			}else  if(value<=22 && value>18){return 0X522a1d;
-
-			}else  if(value<=23 && value>22){return 0X5f8f5b;
-
-			}else  if(value<=29 && value>23){return 0x99887f;
-
-			}else  if(value<=36 && value>29){return 0xffffff;}
-
-
+		function moveFoam(angle,object){
+			for(var i=0;i<object.length;i++){
+				var frag = object[i];
+				frag.position.y+= 0.1*Math.sin(angle);
+			}
 
 		}
 
+		function getRndInteger(min, max) {
+			return Math.floor(Math.random() * (max - min + 1) ) + min;
+		}
 
 
 
 		function Update() {
 			requestAnimationFrame( Update );
 			controls.update();
+			var now = clock.getElapsedTime();
+
+			if(now>time+0.12){
+
+
+				move(angle,0.25,sea);
+				moveFoam(angle,foam);
+				angle++;
+				time= now;
+
+			}
 			stats.update();
 			Render();
 		}
