--- a/StartingCode-heightmap.html
+++ b/StartingCode-heightmap.html
@@ -5,7 +5,6 @@
 
 		body {
 			font-family: Monospace;
-			background-color: #97DBD1;
 			margin: 0px;
 			overflow: hidden;
 		}
@@ -26,8 +25,73 @@
 		<script>
 
 		var scene, camera, renderer, controls, stats;
-		var angle, sea, coast, foam;
+		var angle, sea, coast, earth, foam;
 		var time,clock;
+		var dirLight,hemiLight;
+
+
+
+		function Start() {
+			sea = [];
+			coast = [];
+			earth = [];
+			angle = 0;
+			scene = new THREE.Scene();
+			camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
+			renderer = new THREE.WebGLRenderer( {antialias: true} );
+			renderer.setSize( window.innerWidth, window.innerHeight );
+
+			renderer.setClearColor( 0xf0f0f0 );
+			document.body.appendChild( renderer.domElement );
+
+			clock = new THREE.Clock();
+			time = clock.getElapsedTime();
+
+
+			camera.position.set(71.7645,10.26048,64.1695);
+			camera.lookAt( new THREE.Vector3(0,0,0));
+
+			controls = new THREE.OrbitControls( camera, renderer.domElement );
+
+
+			stats = new Stats();
+			stats.domElement.style.position = 'absolute';
+			stats.domElement.style.top = '0px';
+			document.body.appendChild( stats.domElement );
+
+			hemiLight = new THREE.HemisphereLight( 0xffffff, 0xffffff, 0.21 );
+			hemiLight.color.setHSL( 0.6, 1, 0.6 );
+			hemiLight.groundColor.setHSL( 0.095, 1, 0.75 );
+			hemiLight.position.set( 0, 500, 0 );
+			scene.add( hemiLight );
+
+
+			dirLight = new THREE.DirectionalLight( 0xFFFFD1, 1 );
+			dirLight.position.multiplyScalar( 50 );
+			scene.add( dirLight );
+			dirLight.castShadow = true;
+			dirLight.shadow.mapSize.width = 1024;
+			dirLight.shadow.mapSize.height = 1024;
+
+
+			// terrain
+		  var img = new Image();
+		  img.onload = function () {
+
+		      //get height data from img
+		    var data = getHeightData(img,0.3);
+				createTerrain(data);
+				foam = buildFoam(coast);
+
+				placeForest(earth);
+
+		  };
+		  // load img source
+		  img.src = "textures/TerrainLow.jpg";
+
+
+		}
+
 
 		//return array with height data from img, taken from: http://danni-three.blogspot.it/2013/09/threejs-heightmaps.html
 		function getHeightData(img,scale) {
@@ -60,54 +124,6 @@
 		    return data;
 		}
 
-		function Start() {
-			sea=[];
-			coast=[];
-			angle=0;
-			scene = new THREE.Scene();
-			camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
-			renderer = new THREE.WebGLRenderer( {antialias: true} );
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			renderer.setClearColor( 0xf0f0f0 );
-			document.body.appendChild( renderer.domElement );
-
-			clock = new THREE.Clock();
-			time = clock.getElapsedTime();
-
-
-			camera.position.set(71.7645,10.26048,64,1695);
-			camera.lookAt( new THREE.Vector3(0,0,0));
-
-			controls = new THREE.OrbitControls( camera, renderer.domElement );
-
-
-			stats = new Stats();
-			stats.domElement.style.position = 'absolute';
-			stats.domElement.style.top = '0px';
-			document.body.appendChild( stats.domElement );
-
-			// uncomment if you need to draw coordinate axes when building the scene
-			//Coordinates.drawAllAxes();
-
-
-
-
-			// terrain
-		  var img = new Image();
-		  img.onload = function () {
-
-		      //get height data from img
-		    var data = getHeightData(img,0.3);
-				createTerrain(data);
-				foam = buildFoam(coast);
-
-		  };
-		  // load img source
-		  img.src = "textures/TerrainLow.jpg";
-
-
-
-		}
 
 		function createTerrain(data){
 			var size = data.length;
@@ -137,6 +153,7 @@
 			var isSea = false;
 
 			var isCoast = false;
+			var isEarth = false;
 
 			if(value<=1){
 				var col = getRndInteger(180,200);
@@ -167,6 +184,7 @@
 				var col3 = getRndInteger(82,102);
 				color= new THREE.Color("rgb("+col1+","+col2+","+col3+")");
 
+
 			}else  if(value<=12 && value>9){
 
 				var col = getRndInteger(201,241);
@@ -176,11 +194,13 @@
 
 				var col = getRndInteger(171,201);
 				color= new THREE.Color("rgb(0,"+col+",0)");
+				isEarth = true;
 
 			}else  if(value<=17.5 && value>13){
 
 				var col = getRndInteger(64,84);
 				color= new THREE.Color("rgb(122,"+col+",28)");
+				isEarth = true;
 
 			}else  if(value<=22 && value>17.5){
 
@@ -199,15 +219,18 @@
 
 			}else  if(value<=36 && value>30.5){new THREE.Color("rgb(255, 255, 255)");}
 
-			var mat = new THREE.MeshBasicMaterial({color: color});
+			var mat = new THREE.MeshPhongMaterial({color: color});
 
 			var geo = new THREE.BoxBufferGeometry(1,1,1);
 
 			var cube = new THREE.Mesh(geo,mat);
+
 			if(isSea){
 				sea.push(cube);
 			}else if(isCoast){
 				coast.push(cube);
+			}else if (isEarth) {
+				earth.push(cube);
 			}
 
 			return cube;
@@ -225,21 +248,21 @@
 				for(var j=0;j<4;j++){
 
 					var col = getRndInteger(190,210);
-					color= new THREE.Color("rgb("+col+","+col+","+col+")");
-					var mat = new THREE.MeshBasicMaterial({color: color});
+					var color= new THREE.Color("rgb("+col+","+col+","+col+")");
+					var mat = new THREE.MeshPhongMaterial({color: color});
 
-					var random = getRndInteger(0,3);
+					var random = getRndInteger(0,4);
 					var ran = random/10;
 					var geo = new THREE.BoxBufferGeometry(0.45,0.5,0.45);
 					var cube = new THREE.Mesh(geo,mat);
 					if(j==0){
-						cube.position.set(frag.position.x + 0.25+1,frag.position.y+ran, frag.position.z + 0.25);
+						cube.position.set(frag.position.x + 0.25+1,frag.position.y+ran-0.5, frag.position.z + 0.25);
 					}else if(j==1){
-						cube.position.set(frag.position.x + 0.25+1,frag.position.y+ran, frag.position.z - 0.25);
+						cube.position.set(frag.position.x + 0.25+1,frag.position.y+ran-0.5, frag.position.z - 0.25);
 					}else if(j==2){
-						cube.position.set(frag.position.x - 0.25+1,frag.position.y+ran, frag.position.z - 0.25);
+						cube.position.set(frag.position.x - 0.25+1,frag.position.y+ran-0.5, frag.position.z - 0.25);
 					}else{
-						cube.position.set(frag.position.x - 0.25+1,frag.position.y+ran, frag.position.z + 0.25);
+						cube.position.set(frag.position.x - 0.25+1,frag.position.y+ran-0.5, frag.position.z + 0.25);
 					}
 					scene.add(cube);
 					foam.push(cube);
@@ -254,7 +277,7 @@
 
 			for(var i=0;i<object.length;i++){
 				var frag= object[i];
-				frag.position.y+= Math.sin(angle + frag.position.x*height);
+				frag.position.y+= Math.sin(angle + frag.position.x*height)/4;
 			}
 		}
 
@@ -266,6 +289,59 @@
 
 		}
 
+		function placeForest(object){
+
+			for(var i=0;i<object.length;i++){
+				var elem = object[i];
+				var v = getRndInteger(0,500);
+
+				if(v<300 && v>100){
+
+					buildThree(elem.position.x,elem.position.y,elem.position.z)
+				}}
+			}
+
+		function buildThree(x,y,z){
+
+			for(var i=1;i<=4;i++){
+				var col = getRndInteger(38,47);
+				color= new THREE.Color("rgb(82,"+col+",29)");
+
+				var mat = new THREE.MeshPhongMaterial({color: color });
+
+				var geo = new THREE.BoxBufferGeometry(0.3,0.3,0.3);
+
+				var cube = new THREE.Mesh(geo,mat);
+
+				cube.position.set(x,y+i*0.3,z);
+				scene.add(cube);
+			}
+			var txt = loadTexture("textures/Three.jpg")
+			var mat = new THREE.MeshPhongMaterial({map:txt});
+
+			var geo = new THREE.BoxBufferGeometry(0.7,0.7,0.7);
+
+			var cube = new THREE.Mesh(geo,mat);
+
+			cube.position.set(x,y+1.2+0.35,z);
+			scene.add(cube);
+		}
+
+
+
+		function loadTexture(file) {
+			var texture = new THREE.TextureLoader().load( file , function ( texture ) {
+
+			texture.minFilter = THREE.LinearMipMapLinearFilter;
+			texture.anisotropy = renderer.getMaxAnisotropy();
+			texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
+				texture.offset.set( 0, 0 );
+			texture.needsUpdate = true;} )
+			return texture;
+				}
+
+
+
 		function getRndInteger(min, max) {
 			return Math.floor(Math.random() * (max - min + 1) ) + min;
 		}
@@ -275,14 +351,27 @@
 		function Update() {
 			requestAnimationFrame( Update );
 			controls.update();
+
+
 			var now = clock.getElapsedTime();
 
-			if(now>time+0.12){
+			if(now>time+0.15){
 
+				dirLight.position.set(-10000*Math.cos(angle * Math.PI/180)*1000,10000*Math.sin(angle * Math.PI/180)*1000,37);
+				var sunPos = dirLight.position.x;
 
+				if(-10000<sunPos && sunPos<-5000){
+					dirLight.color.set( 0xFBFFB3 );
+				}else if(-5000<sunPos && sunPos<5000){
+					dirLight.color.set( 0xffffff );
+				}else if(5000<sunPos && sunPos<10000){
+					dirLight.color.set( 0xFA9D9D );
+				}
+
+				console.log(dirLight.position.x,dirLight.position.y,dirLight.position.z);
 				move(angle,0.25,sea);
 				moveFoam(angle,foam);
-				angle++;
+				angle+=0.3;
 				time= now;
 
 			}
